[package]
name = "dungen"
version = "0.1.0"
edition = "2021"

[dependencies]
bracket-lib = { version = "0.8.7", features = ["specs"] }
glam = "0.29.2"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
specs = { version = "0.20.0", features = ["specs-derive", "derive"] }
specs-derive = "0.4.1"
